--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,8 +25,8 @@ jobs:
       run: |
         syft docker.io/kodekloud/webapp-color:latest -o spdx-json > spdx.json
 
-    - name: Upload SBOM Artifact
+      - name: Upload SBOM Artifact
       uses: actions/upload-artifact@v4
       with:
         name: spdx-report
-        path: spdx.json       #modified
+        path: spdx.json
